--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
 		"@types/node": "^25.2.0",
 		"prettier": "^3.8.1",
 		"typescript": "^5.9.3"
+	},
+	"dependencies": {
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.3"
 	}
 }
