--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@alebooking/common",
-	"version": "1.0.2",
+	"version": "1.1.0",
 	"description": "Core shared comonents for AleBooking microsrevice ecosystem",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -26,6 +26,10 @@
 		"typescript": "^5.9.3"
 	},
 	"dependencies": {
+		"@alebooking/contracts": "^1.1.4",
+		"@nestjs/common": "^11.1.13",
+		"@nestjs/config": "^4.0.3",
+		"@nestjs/microservices": "^11.1.13",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.3"
 	}
