--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@nestjs/config": "^4.0.3",
 		"@nestjs/microservices": "^11.1.13",
 		"class-transformer": "^0.5.1",
-		"class-validator": "^0.14.3"
+		"class-validator": "^0.14.3",
+		"rxjs": "^7.8.2"
 	}
 }
